--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
        <div class="content">
            <div class="maininfo">
                <h1>Get <span>insights</span> that help your business grow.</h1>
-               <p class="mainp">Discover the benefits of data analytics and make better decisions regardind revenue, customer experience, and overall efficiency.</p>
-           
-               
+               <p class="mainp">Discover the benefits of data analytics and make better decisions regardind revenue, customer experience, and overall efficiency.
+               </p>
                    <div class="subinfo">
                        <div class="infocomp">
                            <p class="number">10k+</p>
@@ -29,7 +28,7 @@
                            <p class="infonumbers">QUERIES</p>
                        </div>
                    </div>
-            </div>
+        </div>
             <div class="img"></div>
        </div> 
     </main>
